--- a/tables.html
+++ b/tables.html
@@ -18,9 +18,13 @@
 <body>
     <h1>Hot Restaurant</h1>
     <h2>Current Reservations and Waiting List</h2>
-    <div class = "rsvp"> <a class= "rsvpButton" href= "./reserve.html"> Make Reservation</a></div>
-    <div class = "home"> <a class= "homeButton" href= "./home.html">Home</a></div>
+    <a class= "rsvpButton" href= "./reserve.html"> Make Reservation</a>
+    <a class= "homeButton" href= "./home.html">Home</a>
 
+    <br>
+    <br>
+    <br>
+    <br>
 <div>
     <h3>Current Reservations</h3>
 </div>
