--- a/home.html
+++ b/home.html
@@ -13,16 +13,17 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-    <!-- Card using Bootstrap-->
-    <div class="card w-75">
-        <div class="card-body">
-            <h1 class="card-title">Hot Restaurant</h1>
-            <h2 class="card-text">Reserve your Table Online</h2>
-            <h5>We only have 10 tables left!</h5>
-            <a href="./tables.html" class="btn btn-primary">View Tables</a>
-            <a href="./reserve.html" class="btn btn-primary">Reserve Tables</a>
+    <!-- Jumbotron using Bootstrap-->
+    <div class="container">
+        <div class="jumbotron">
+            <h1 class="display-4">Hot Restaurant</h1>
+            <p class="lead">Reserve Your Table Online</p>
+            <hr class="my-4">
+            <p>We have 10 tables left</p>
+            <a class="btn btn-primary btn-lg" href="./reserve.html" role="button">Reserve Your Table</a>
+            <a class="btn btn-primary btn-lg" href="./tables.html" role="button">View Tables</a>
         </div>
-     </div>
+    </div>
 
 
     <!-- JS for Bootstrap-->
