--- a/reserve.html
+++ b/reserve.html
@@ -23,15 +23,15 @@
             <a class="btn btn-primary btn-lg" href="./tables.html" role="button">View Tables</a>
         </div>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card" style="width: 74rem;">
             <div class="card-header">
-                Featured
+                Current Reservations
             </div>
         </div>
         
-        <div class="card" style="width: 18rem;">
+        <div class="card" style="width: 74rem;">
             <div class="card-header">
-                    Featured
+                  Waiting List
             </div>
         </div>
 
