Adding form to reserve page

--- a/reserve.html
+++ b/reserve.html
@@ -22,8 +22,31 @@
             <p>Reserve Your Table</p>
             <a class="btn btn-primary btn-lg" href="./tables.html" role="button">View Tables</a>
         </div>
+    
 
-        <div class="card" style="width: 74rem;">
+        <!-- Form -->
+        <form>
+                <div class="form-group">
+                  <label for="name">Name</label>
+                  <input type="name" class="form-control" id="exampleInputname1" aria-describedby="nameHelp" placeholder="Enter name">
+                </div>
+                <div class="form-group">
+                  <label for="email">Email</label>
+                  <input type="email" class="form-control" id="email" placeholder="Email">
+                </div>
+                <div class="form-group">
+                    <label for="phoneNumber">Phone Number</label>
+                    <input type="number" class="form-control" id="phoneNumber" aria-describedby="nameHelp" placeholder="Enter your phone number">
+                    </div>
+                    <div class="form-group">
+                    <label for="id">Unique ID</label>
+                    <input type="id" class="form-control" id="uniqueID" placeholder="Unique ID">
+                </div>
+               
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </form>
+
+        <!-- <div class="card" style="width: 74rem;">
             <div class="card-header">
                 Current Reservations
             </div>
@@ -33,7 +56,7 @@
             <div class="card-header">
                   Waiting List
             </div>
-        </div>
+        </div> -->
 
     </div>
 
